Upgrade to java 17 and some other refactoring (#53)